# kizuna-voice-designer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: index.html
examples/: basic_usage.py  batch_generate.py  custom_params.py  reuse_embedding.py
kizuna_voice_designer/: __init__.py  app.py  device_utils.py  downloader.py  flowmatching.py  flowmatching_cfg.py  gradio_app.py  synthesizer.py
